fix save learn data after logout bug, fix imports, fix margin in cards, change color for pagination disabled pages, add color for selected sort mode for the corresponding button, add disabling for: header page links, cards sort buttons, sidebar cards type selecting buttons

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -15,10 +15,6 @@
     cursor: default;
 }
 
-/*.default:focus {*/
-/*    background-color: deepskyblue;*/
-/*}*/
-
 .red {
     background: red;
 }
@@ -41,6 +37,10 @@
 
 .sortButton:last-child {
     margin-left: 10px;
+}
+
+.sortButtonActive {
+    background-color: green;
 }
 
 .deleteButton, .updateButton, .cardButton, .learnButton {
