--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -14,6 +14,7 @@
     border-radius: 10px 0 10px 10px;
     padding: 20px 0;
     align-items: center;
+    justify-content: center;
     background-color: #ccc;
 }
 
